# mtd-assumption-drift-2026

./: .env.example  .gitignore  AGENT_CONTEXT.md  CITATION.cff  CLAUDE.md  INITIAL_PROMPT.md  INVESTIGATION_BRIEF.md  LICENSE  README.md  methodology.md
LICENSES/: CC-BY-4.0.txt
analysis/: README.md  pyproject.toml
analysis/src/mtd_drift/: __init__.py  config.py  supabase_writer.py
analysis/src/mtd_drift/drift/: __init__.py  __main__.py  caveats.py  checksum.py  reprice.py  runner.py
analysis/src/mtd_drift/findings/: __init__.py  __main__.py  populate.py
analysis/src/mtd_drift/ingest/: __init__.py  __main__.py  ons_history.py  runner.py
analysis/tests/: conftest.py  test_drift_reprice.py  test_drift_runner.py  test_findings_populate.py  test_ingest_runner.py  test_ons_history.py  test_supabase_writer.py
data/: assumptions.yaml  external_series.yaml  sources.yaml
findings/: 01_transitional_cost_drift_50k_cohort.md  02_transitional_cost_drift_aggregate.md  03_population_cross_check.md  04_tax_gap_consistency.md  05_roi_sensitivity.md  README.md
supabase/migrations/: 0001_mtd_2026_seed_initial_data.sql
